Generate a reg file to register COM interop.

--- a/CredProvider.NET/CredProvider.NET.csproj
+++ b/CredProvider.NET/CredProvider.NET.csproj
@@ -69,4 +69,8 @@
     <EmbeddedResource Include="tile-icon.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>$(frameworkdir)\$(frameworkversion)regasm $(TargetDir)CredProvider.NET.dll /regfile:$(TargetDir)register.reg
+</PostBuildEvent>
+  </PropertyGroup>
 </Project>
